# ChaosChess

./: .gitignore  package.json  tsconfig.json
server/: Cargo.toml
server/src/: main.rs  server.rs
src/: entrypoint.tsx  index.html  manifest.webmanifest  style.scss  sw.js  theme.ts
src/App/: index.tsx  styles.ts
src/App/Board/: index.tsx  styles.ts
src/App/Dashboard/: index.tsx  styles.ts
src/App/Header/: index.tsx  styles.ts
src/App/redux/: reducer.ts
src/components/App/: index.tsx  responsive.scss  styles.ts  util.ts
src/components/Board/: CanvasChess.tsx  constants.ts  index.tsx  styles.ts  types.ts  util.ts
src/components/Dashboard/: index.tsx  styles.ts
src/components/FriendFinder/: index.tsx  styles.ts
src/components/GameModes/: index.tsx
src/components/Go/: index.tsx  style.ts  util.ts
src/components/Header/: index.tsx  styles.ts
src/engine/: board.ts  constants.ts  engine.worker.ts  eval.ts  index.ts  package.json  types.ts  util.ts  values.ts  worker.ts
src/game/: board.js  index.ts
src/games/: base.ts  chaos-base.ts  draft.ts  eight-knights.ts  index.ts  normal-chaos.ts  ranked-chaos.ts  regular.ts  semi-chaos.ts  seven-knights.ts
src/gfx/: board.js  index.ts  piece.js  piece.ts  square.js
src/goEngine/: board.ts  constants.ts  engine.worker.ts  eval.ts  index.ts  types.ts
src/hooks/: useSocket.ts
src/icons/: icons.json
src/messaging/: dispatcher.ts  index.ts  respond.ts  util.ts
src/public/: manifest.webmanifest
src/redux/: rootReducer.ts  store.ts  types.ts
src/redux/App/: index.ts  (+2 more)
src/templates/: reducer.ts
(+94 files in other folders)
